fix visualization colours for dark mode

--- a/packages/front-end/styles/_bootstrap-theme-overrides.scss
+++ b/packages/front-end/styles/_bootstrap-theme-overrides.scss
@@ -17,6 +17,10 @@ a.text-dark:focus {
   color: var(--text-dark) !important;
 }
 
+pre {
+  color: var(--text-color-main);
+}
+
 .text-muted {
   color: var(--text-color-muted) !important;
 }
@@ -146,24 +150,40 @@ a.text-dark:focus {
   background-color: var(--alert-info-background);
   border-color: var(--alert-info-border-color);
   color: var(--alert-info-color);
+
+  .alert-link {
+    color: var(--text-color-main);
+  }
 }
 
 .alert-danger {
   background-color: var(--alert-danger-background);
   border-color: var(--alert-danger-border-color);
   color: var(--alert-danger-color);
+
+  .alert-link {
+    color: var(--text-color-main);
+  }
 }
 
 .alert-warning {
   background-color: var(--alert-warn-background);
   border-color: var(--alert-warn-border-color);
   color: var(--alert-warn-color);
+
+  .alert-link {
+    color: var(--text-color-main);
+  }
 }
 
 .alert-success {
   background-color: var(--alert-success-background);
   border-color: var(--alert-success-border-color);
   color: var(--alert-success-color);
+
+  .alert-link {
+    color: var(--text-color-main);
+  }
 }
 
 // endregion Alerts
@@ -324,7 +344,8 @@ a.text-dark:focus {
   background-color: var(--diff-removed-background) !important;
 }
 
-.d2h-code-line del, .d2h-code-side-line del {
+.d2h-code-line del,
+.d2h-code-side-line del {
   background-color: var(--diff-removed-background-highlight) !important;
 }
 
@@ -332,7 +353,8 @@ a.text-dark:focus {
   background-color: var(--diff-added-background) !important;
 }
 
-.d2h-code-line ins, .d2h-code-side-line ins {
+.d2h-code-line ins,
+.d2h-code-side-line ins {
   background-color: var(--diff-added-background-highlight) !important;
 }
 
